--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,7 @@
+root = true
+
 [*.php]
-charset=utf-8
-end_of_line=lf
-insert_final_newline=true
-indent_style=space
-indent_size=4
+charset = utf-8
+end_of_line = lf
+indent_style = tab
+indent_size = 4
